<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >

    <!--
       padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部
    -->

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dip" >


        <TextView
            android:id="@+id/login_user_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_username" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_input"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:singleLine="true" />
        <!-- 密码 text -->

        <TextView
            android:id="@+id/login_password_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit"
            android:layout_marginTop="3dp"
            android:text="@string/login_label_password" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:hint="@string/login_userpassword_hint"
            android:inputType="textPassword"
            android:password="true"
            android:singleLine="true" />
       
        <!-- 登录button -->

        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/password_edit"
            android:layout_below="@id/password_edit"
            android:background="@drawable/blue_button"
            android:text="@string/login_label_signin" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/login_register_link"
            android:textColor="#888"
            android:textColorLink="#FF0066CC" />
    </RelativeLayout>

</LinearLayout>